--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,27 +2,14 @@ name: Pirtolx API CI/CD
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Run tests
-        run: |
-          echo "Tests OK"
-
   build-and-push:
-    needs: test
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -30,13 +17,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Docker image
-        run: |
-          docker build -t milodorosario/pirtolx-api:${{ github.sha }} .
-
-      - name: Push Docker image
-        run: |
-          docker push milodorosario/pirtolx-api:${{ github.sha }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            milodorosario/pirtolx-api:${{ github.sha }}
+            milodorosario/pirtolx-api:latest
 
   deploy:
     needs: build-and-push
@@ -49,7 +37,10 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            docker pull milodorosario/pirtolx-api:${{ github.sha }}
             docker stop pirtolx-api || true
             docker rm pirtolx-api || true
-            docker run -d --name pirtolx-api -p 7002:7002 milodorosario/pirtolx-api:${{ github.sha }}
+            docker pull milodorosario/pirtolx-api:latest
+            docker run -d --restart unless-stopped \
+              --name pirtolx-api \
+              -p 8000:8000 \
+              milodorosario/pirtolx-api:latest
