--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,46 +1,16 @@
-name: Pirtolx API CI/CD
+deploy:
+  needs: build-and-push
+  runs-on: ubuntu-latest
 
-on:
-  push:
-    branches: [ master ]
-
-jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: |
-            milodorosario/pirtolx-api:${{ github.sha }}
-            milodorosario/pirtolx-api:latest
-
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to VPS
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          script: |
-            docker stop pirtolx-api || true
-            docker rm pirtolx-api || true
-            docker pull milodorosario/pirtolx-api:latest
-            docker run -d --restart unless-stopped \
-              --name pirtolx-api \
-              -p 8000:8000 \
-              milodorosario/pirtolx-api:latest
+  steps:
+    - name: Deploy to VPS
+      uses: appleboy/ssh-action@v1
+      with:
+        host: ${{ secrets.VPS_HOST }}
+        username: ${{ secrets.VPS_USER }}
+        key: ${{ secrets.VPS_SSH_KEY }}
+        script: |
+          docker pull milodorosario/pirtolx-api:${{ github.sha }}
+          docker stop pirtolx-api || true
+          docker rm pirtolx-api || true
+          docker run -d --name pirtolx-api -p 8000:8000 milodorosario/pirtolx-api:${{ github.sha }}
